hphp/test/vm/static_clsmethod.php.exp
bool(true)
string(1) "C"
bool(true)
string(1) "D"
**************
bool(true)
string(1) "C"
bool(true)
string(1) "D"
**************
bool(false)
string(1) "C"
bool(false)
string(1) "D"
**************
bool(false)
string(1) "C"
bool(false)
string(1) "D"
**************
bool(true)
string(1) "D"
bool(true)
string(1) "D"
bool(false)
string(1) "D"
bool(false)
string(1) "C"
**************
HipHop Fatal error: Cannot access static:: when no class scope is active in hphp/test/vm/static_clsmethod.php on line 55
